--- a/src/template.html
+++ b/src/template.html
@@ -73,17 +73,17 @@
               I am a Software Engineer at Cisco Systems Canada working on the MPLS Forwarding Infrastructure team and
               the Segment Routing/Performance Measurement team.<br><br>
               I have a passion for learning and always like to be learning something new. Whether it is a new
-              language (I currently have a 400+ day streak on duolingo), a new programming language, or any interesting
+              language (I currently have a 400+ day streak on Duolingo), a new programming language, or any interesting
               things about history, technology, or our universe.<br><br>
             </p>
             <p class="about-wrapper__info-text">
               My hobbies include:<br>
-              Language learning - I have a goal to have two languages other than English at or above a B proficiency
+              Language Learning - I have a goal to have two languages other than English at or above a B proficiency
               level before I am 35.<br>
               Mobile App Development - I have a goal to publish an app to the Apple App Store by the end of 2022.<br>
               Sports - I especially love to play basketball, volleyball, and spikeball.<br>
               Hiking & Camping - I really enjoy spending time out in nature, especially after spending most of my time
-              inside.<br>
+              inside staring at screens.<br>
             </p>
             <span class="d-flex mt-3">
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="">
@@ -215,8 +215,8 @@
       <h2 class="section-title">Contact</h2>
       <div class="contact-wrapper">
         <p class="contact-wrapper__text"></p>
-        <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="mailto:example@email.com">Call to
-          Action</a>
+        <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume"
+          href="mailto:logan.samuel.roth@gmail.com">Please Reach Out!</a>
       </div>
     </div>
   </section>
